[package]
name = "os"
version = "0.1.0"
edition = "2018"

[build-dependencies]
nasm-rs = "0.2.0"

[dependencies]
bootloader = "0.9.8"
spin = "0.9.1"
static_assertions = "1.1.0"
unroll = "0.1.5"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.arrayvec]
version = "0.7.1"
default-features = false